@@ -3,8 +3,8 @@
 import os
 import threading
 
-from mcomix import constants
 from mcomix import callback
+from mcomix import archive_tools
 
 
 class _BackendObject(object):
@@ -283,11 +283,11 @@ class _WatchListEntry(_BackendObject):
         if not self.recursive:
             available_files = frozenset([os.path.join(self.directory, filename)
                 for filename in os.listdir(self.directory)
-                if constants.SUPPORTED_ARCHIVE_REGEX.search(filename)])
+                if archive_tools.get_supported_archive_regex().search(filename)])
         else:
             available_files = []
             for dirpath, dirnames, filenames in os.walk(self.directory):
-                for filename in filter(constants.SUPPORTED_ARCHIVE_REGEX.search, filenames):
+                for filename in filter(archive_tools.get_supported_archive_regex().search, filenames):
                     path = os.path.join(dirpath, filename)
                     available_files.append(path)
 
